--- a/docs/Tetris/style.css
+++ b/docs/Tetris/style.css
@@ -32,6 +32,17 @@ body {
   text-decoration: none;
   color: black;
 }
+#menu #go-home-link {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: left;
+  font-weight: bold;
+  font-size: small;
+}
+#menu #go-home-link a {
+  color: darkslateblue;
+}
 #upcoming {
   display: block;
   margin: 0 auto;
