--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -21,18 +21,21 @@
 }
 
 .gh-repo-settings-button {
-  background-color: #333;
-  color: #fff;
-  font-weight: bold;
+  background-color: rgb(246, 248, 250);
+  color: #000;
   padding: 0.25em 0.75em;
-  border-radius: 0.5em;
+  border-style: solid;
+  border-radius: 0.25em;
+  border-color: rgba(31, 35, 40, 0.15);
+  border-width: 0.1em;
 }
 
 .gh-button-green {
   background-color: green;
+  color: #fff;
   font-weight: bold;
   padding: 0.25em 0.75em;
-  border-radius: 0.5em;
+  border-radius: 0.25em;
 }
 
 .hidden {
